# Lumen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  lumen.sh  model_registry.toml  setup-local.sh
bench/: BENCHMARK_REPORT.md  METHODOLOGY.md  README.md  RESULTS.md  run_bench.sh
crates/lumen-bench/: Cargo.toml
crates/lumen-bench/src/: config.rs  lib.rs  output.rs  results.rs  runner.rs  suite.rs
crates/lumen-cli/: Cargo.toml
crates/lumen-cli/src/: bench.rs  cache.rs  convert.rs  download.rs  help.rs  lib.rs  main.rs  registry.rs  run.rs  tokenize.rs
crates/lumen-cli/tests/: multi_shard_convert.rs  tok_checklist_harness.rs
crates/lumen-convert/: Cargo.toml
crates/lumen-convert/src/: convert.rs  dequant.rs  gguf.rs  hyperparams.rs  lib.rs  sharded.rs  tensor_io.rs  tensor_names.rs  tokenizer_data.rs
crates/lumen-convert/src/arch/: dense.rs  gdn_gates.rs  mod.rs  moe.rs  qwen35.rs  qwen35_moe.rs
crates/lumen-format/: Cargo.toml
crates/lumen-format/src/: crc.rs  error.rs  header.rs  hyperparams.rs  index.rs  large_model.rs  lib.rs  quantization.rs  reader.rs  rng.rs  streaming_writer.rs  test_model.rs  tokenizer.rs  writer.rs
crates/lumen-runtime/: Cargo.toml
crates/lumen-runtime/examples/: dump_quant_hint.rs  provider_diff.rs
crates/lumen-runtime/src/: config.rs  engine.rs  error.rs  kv.rs  lib.rs  pipeline.rs  runtime_defaults.rs  sampling.rs  session.rs  telemetry.rs  thread_pool.rs  tooling.rs
crates/lumen-runtime/src/accelerate/: ffi.rs  mod.rs
crates/lumen-runtime/src/compute/: cpu_naive.rs  cpu_simd.rs  mod.rs  naive.rs  simd.rs  simd_kernels.rs
crates/lumen-runtime/src/cuda/: backend_impl.rs  decode.rs  ffi.rs  gdn.rs  gpu_buffers.rs  graph.rs  kv_cache.rs  mod.rs  moe.rs  moe_cache.rs  prefill.rs  prefill_attention.rs  profiler.rs  types.rs
crates/lumen-runtime/src/cuda/shaders/: activations.cu  argmax.cu  attention.cu  attention_decode_tiled.cu  attention_f16.cu  convert_bf16.cu  convert_f16.cu  dequant_q4_0_f16.cu  dequant_q8_0_f16.cu  embed.cu  flash_attention.cu  flash_attention_fa2.cu  flash_attention_wmma.cu  fused_f16.cu  fused_glu_gemv.cu  fused_rmsnorm_matvec.cu  gdn.cu  gdn_f64accum.cu  gdn_megakernel.cu  gdn_register_resident.cu  gemm_f32.cu  graph_kernels.cu  hgemv_q4_0.cu  hgemv_q8_0.cu  kv_cache.cu  kv_cache_f16.cu  matvec_bf16.cu  matvec_dp4a_q8_1.cu  matvec_f16.cu  matvec_f32.cu  matvec_q4_0.cu  matvec_q4_0_dp4a.cu  matvec_q4_0_smem.cu  matvec_q4_aligned_fused_down.cu  matvec_q4_aligned_q8_1.cu  matvec_q4_split_q8_1.cu  matvec_q4_tile_q8_1.cu  matvec_q8_0.cu  matvec_q8_0_aligned.cu  matvec_q8_0_dp4a.cu  (+47 more)
crates/lumen-runtime/src/eval/: coherence.rs  mod.rs
crates/lumen-runtime/src/expert/: cache.rs  mod.rs  profiler.rs  reader.rs
crates/lumen-runtime/src/kv/: disk.rs  mod.rs
crates/lumen-runtime/src/metal/: backend_impl.rs  decode_greedy.rs  decode_profile.rs  decode_single_cb.rs  disk_sync.rs  ffi.rs  gdn.rs  gpu_resident.rs  graph_reorder.rs  io.rs  mod.rs  moe.rs  mps_graph_ffi.rs  pipelines.rs  prefill.rs  prefill_encode.rs  profile.rs  repack_bf16.rs  repack_q4.rs  repack_q8.rs  shaders.rs  ssm_out_microbench.rs  types.rs
crates/lumen-runtime/src/metal/shaders/: attention.msl  batched_ops.msl  common.msl  embed.msl  ffn_elementwise.msl  ffn_fused_norm.msl  gdn_advanced.msl  gdn_core.msl  gemm_f32.msl  gemm_q4.msl  gemm_q8_0.msl  gemm_q8_0_ported.msl  gemm_residual_bf16.msl  gemm_residual_f16.msl  matmul_bf16.msl  matmul_f16.msl  matmul_f32.msl  matmul_q4.msl  matmul_q8_0.msl  matmul_q8_0_alt.msl  mod.rs  moe.msl  norm.msl  rope_activation.msl
crates/lumen-runtime/src/metal/tests/: basic.rs  gdn.rs  microbench.rs  mod.rs  moe.rs  paired_dispatch.rs
crates/lumen-runtime/src/storage/: mmap.rs  mod.rs  sync.rs
crates/lumen-runtime/src/weight/: cache.rs  mod.rs  provider_async.rs  provider_mmap.rs  provider_sync.rs
crates/lumen-runtime/tests/: corr010_kv_cache_equivalence_test.rs  cuda_all_precision_e2e_test.rs  cuda_attention_test.rs  cuda_attention_tiled_test.rs  cuda_bench_test.rs  cuda_bf16_gemmex_fallback_test.rs  cuda_bf16_gemmex_fault_injection_test.rs  cuda_correctness_reference.rs  cuda_correctness_test.rs  cuda_cublas_ab_test.rs  cuda_cublas_test.rs  cuda_cuinit_test.rs  cuda_decode_token_greedy_test.rs  cuda_e2e_generate_test.rs  cuda_embed_test.rs  cuda_f16_dispatch_test.rs  cuda_f16_test.rs  cuda_fused_rmsnorm_test.rs  cuda_gdn_integration_test.rs  cuda_gdn_test.rs  cuda_kernel_test.rs  cuda_layer_test.rs  cuda_long_context_token_stream_test.rs  cuda_matvec_q4_test.rs  cuda_matvec_q8_aligned_q8_1_hw_test.rs  cuda_matvec_q8_test.rs  cuda_matvec_q8_v3_test.rs  cuda_moe_e2e_test.rs  cuda_output_proj_nr_decode_test.rs  cuda_prefill_gemm_test.rs  cuda_prefill_norm_test.rs  cuda_prefill_rope_test.rs  cuda_prefill_test.rs  cuda_production_test.rs  cuda_q4_dispatch_test.rs  cuda_q4_split_decode_test.rs  cuda_q8_4thread_microbench.rs  cuda_q8_aligned_nr8_test.rs  cuda_q8_aos_nr8_microbench.rs  cuda_q8_dispatch_test.rs  (+10 more)
crates/lumen-server/: Cargo.toml
crates/lumen-server/src/: engine.rs  error.rs  lib.rs  router.rs  sse.rs  tokenstop.rs
crates/lumen-server/src/wire/: anthropic.rs  mod.rs  openai.rs
crates/lumen-server/tests/: reasoning_budget_test.rs  server_integration.rs  server_memory_breakdown.rs  server_soak.rs  server_soak_cuda.rs
demo/: cuda_inference.py  metal_inference.py
docs/: architecture.md  cli.md  environment-variables.md  getting-started.md  lbc-format.md  production.md  server.md  support.md  troubleshooting.md
examples/: cuda_inference.py  metal_inference.py
quality/: detectors.py  run_metal_matrix.sh  run_suite.py
quality/corpus/: medium.jsonl  multiturn.jsonl  short.jsonl  verylong.jsonl
scripts/: metal_determinism_regression.sh  native_bench.py  native_bench.sh  prompt_length_bench.sh  prompt_length_bench_b7_only.sh  quickstart.sh
tests/fixtures/: generate_tokenizer_fixtures.py  tokenizer_llama_3_1_8b.json  tokenizer_qwen2_5_3b.json  tokenizer_qwen3_5_9b.json  tokenizer_tinyllama.json
