[workspace]
resolver = "2"
members = [
    "crates/lumen-format",
    "crates/lumen-runtime",
    "crates/lumen-convert",
    "crates/lumen-bench",
    "crates/lumen-cli",
    "crates/lumen-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/faisalmumtaz89/Lumen"
homepage = "https://github.com/faisalmumtaz89/Lumen"
description = "GPU-resident LLM inference engine in Rust with Metal GPU acceleration"

[workspace.dependencies]
lumen-format = { path = "crates/lumen-format" }
lumen-runtime = { path = "crates/lumen-runtime" }
lumen-convert = { path = "crates/lumen-convert" }
lumen-bench = { path = "crates/lumen-bench" }
lumen-server = { path = "crates/lumen-server" }
thiserror = "2"
# mimalloc global allocator (Microsoft, MIT). Pinned at the
# workspace level so the production CLI binary and the lumen-server
# integration/soak test binaries share one version. Library crates do
# NOT depend on this so external consumers can pick their own allocator.
mimalloc = "0.1"
