[package]
name = "lumen-cli"
description = "CLI for Lumen LLM inference engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "lumen"
path = "src/main.rs"

[features]
default = ["download"]
download = ["ureq", "indicatif", "dirs", "sha2"]
cuda = ["lumen-runtime/cuda"]

[dependencies]
lumen-format.workspace = true
lumen-runtime.workspace = true
lumen-convert.workspace = true
lumen-bench.workspace = true
regex = "1"
fancy-regex = "0.14"
unicode-normalization = "0.1"
toml = "0.8"
ureq = { version = "2", features = ["json"], optional = true }
indicatif = { version = "0.17", optional = true }
dirs = { version = "6", optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
