[package]
name = "lumen-format"
description = "LBC (Layer-Blob Container) binary format: types, parser, writer, and streaming writer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
