[package]
name = "lumen-runtime"
description = "Core inference engine with Metal GPU, SIMD, and scalar compute backends"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
cuda = ["dep:cudarc"]
# Test-only feature: enables a one-shot fault-injection hook that forces
# `launch_hgemv_bf16` / `_residual` to return `Bf16LaunchOutcome::CublasFailure`
# without actually calling cuBLAS. Used by the
# `cuda_bf16_gemmex_fault_injection_test` integration suite to drive the
# wrapper's per-call CUBLAS-failure -> legacy-kernel fall-through arm.
# The hook is `#[cfg(any(test, feature = "test-fault-injection"))]` so it is
# also reachable from in-tree `#[test]` functions without the feature
# being enabled at the workspace level; production builds without the
# feature have zero overhead from the inject path.
test-fault-injection = []

[dependencies]
lumen-format.workspace = true
thiserror.workspace = true
libc = "0.2"
cudarc = { version = "0.19", default-features = false, features = ["std", "driver", "nvrtc", "cublas", "f16", "fallback-dynamic-loading", "cuda-version-from-build-system", "fallback-latest"], optional = true }
